--- a/Code/mnist_tutorial_using_fastai_and_pytorch.ipynb
+++ b/Code/mnist_tutorial_using_fastai_and_pytorch.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Cezarrr9/Digit-Recognizer/blob/main/mnist_tutorial_using_fastai_and_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Cezarrr9/Digit-Recognizer/blob/main/Code/mnist_tutorial_using_fastai_and_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "VY6yUK_pO05N"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
       "metadata": {
         "id": "5yw7-tjcPYjq"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,19 @@
       "metadata": {
         "id": "_sqJCzOhPok3"
       },
-      "execution_count": 21,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "iskaggle = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', '')"
+      ],
+      "metadata": {
+        "id": "LQaDNSSpjztN"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +157,7 @@
         "id": "cogzsc4APx1j",
         "outputId": "069620b6-7185-411c-aa45-59021d180d01"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +211,7 @@
         "trusted": true,
         "id": "DF1gZFeFFBwU"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +234,7 @@
         "trusted": true,
         "id": "rfiDwrL_FBwU"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +272,7 @@
         "trusted": true,
         "id": "7o7xA4jdFBwV"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +302,7 @@
         "trusted": true,
         "id": "S42O-MQhFBwW"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +326,7 @@
         "id": "GUfZffvOFBwW",
         "outputId": "263a6972-aad5-44a8-e702-a03a47fef279"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +357,7 @@
         "trusted": true,
         "id": "LZE0hrN-FBwW"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +392,7 @@
         "trusted": true,
         "id": "2UhzSiOfFBwX"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +429,7 @@
         "trusted": true,
         "id": "5MDGOdWiFBwX"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +464,7 @@
         "trusted": true,
         "id": "E-9-oJt9FBwX"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +502,7 @@
         "trusted": true,
         "id": "8IETmol7FBwY"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -515,7 +527,7 @@
         "trusted": true,
         "id": "o_IfxZdkFBwY"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -560,7 +572,7 @@
         "id": "vt6T0TLUFBwZ",
         "outputId": "9c375d53-5aec-4d89-8f48-407b01e81e5b"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +728,7 @@
         "trusted": true,
         "id": "EAhNHh5eFBwZ"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -748,7 +760,7 @@
         "id": "0y2EtKn7FBwZ",
         "outputId": "43828b0d-7b2b-4134-a651-962ae2439716"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,7 +808,7 @@
         "id": "3vQFSgT9FBwZ",
         "outputId": "bc5279a5-d289-4363-9b56-49547e6fb13f"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -877,7 +889,7 @@
         "id": "RW5H6LTRFBwa",
         "outputId": "52f15cbb-3ef1-490a-859a-64abf7849a83"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +934,7 @@
         "id": "ZGn3VP5pFBwa",
         "outputId": "34c3a7ea-d447-4ce9-ff8c-1e90529bc9de"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1041,7 +1053,7 @@
         "id": "eSegp_hlFBwa",
         "outputId": "da54e2f5-3ee3-4181-a08d-09656ecc9582"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1134,7 +1146,7 @@
         "id": "kcwK9H6UFBwb",
         "outputId": "2b67c7b6-7752-4c93-f116-a33ea97486f0"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1205,7 +1217,7 @@
         "id": "sQEVM0SoFBwn",
         "outputId": "f4a17936-78aa-4885-8ed0-0d85094293ab"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1252,7 +1264,7 @@
         "id": "Tu2R3iYMFBwn",
         "outputId": "0df785a4-a3b6-4e56-a3d1-3b22b65af898"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1424,7 +1436,7 @@
         "id": "y_zY_csxFBwo",
         "outputId": "2c4a2d4f-1592-44ac-f29c-8a09334256a3"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1491,7 +1503,7 @@
         "trusted": true,
         "id": "k-ikLDFDFBwo"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1519,7 +1531,7 @@
         "trusted": true,
         "id": "Relr5zVIFBwo"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     }
   ]
